--- a/Mapping_Multiple_Points/index.html
+++ b/Mapping_Multiple_Points/index.html
@@ -29,6 +29,8 @@
     crossorigin=""></script>
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
+    <!-- CityData MUST BE BEFORE LINK TO LOGIC.JS  -->
+    <script type="text/javascript" src="static/js/cities.js"></script>
     <!--  JavaScript -->
     <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
